Added Street View Scene Bounding Box
