# HudHud/Model/MapStore.swift
@@ -60,8 +60,10 @@ final class MapStore: ObservableObject {
     var hudhudStreetView = HudhudStreetView()
     private let hudhudResolver = HudHudPOI()
     @Published var streetViewScene: StreetViewScene?
+    @Published var nearestStreetViewScene: StreetViewScene?
     @Published var fullScreenStreetView: Bool = false
     var cachedScenes = [Int: StreetViewScene]()
+    var mapView: NavigationMapView?
 
     @Published var navigatingRoute: Route? {
         didSet {
@@ -361,6 +363,23 @@ extension MapStore: NavigationViewControllerDelegate {
 
 extension MapStore {
 
+    func zoomToStreetViewLocation() {
+        guard let lat = streetViewScene?.lat else { return }
+        guard let lon = streetViewScene?.lon else { return }
+        self.camera = .center(CLLocationCoordinate2D(latitude: lat, longitude: lon),
+                              zoom: 15, pitch: 0, pitchRange: .fixed(0))
+    }
+
+    func loadNearestStreetView(minLon: Double, minLat: Double,
+                               maxLon: Double, maxLat: Double) async {
+        do {
+            self.nearestStreetViewScene = try await self.hudhudStreetView.getStreetViewSceneBBox(box: [minLon, minLat, maxLon, maxLat])
+        } catch {
+            self.nearestStreetViewScene = nil
+            Logger.streetViewScene.error("Loading StreetViewScene failed \(error)")
+        }
+    }
+
     func loadStreetViewScene(id: Int) async {
         if let item = self.cachedScenes[id] {
             self.streetViewScene = item
@@ -379,7 +398,7 @@ extension MapStore {
     }
 
     func preloadStreetViewScene(id: Int) async {
-        if let item = self.cachedScenes[id] {
+        if self.cachedScenes[id] != nil {
             return
         }
 
